Finish with Android Implementation.

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 
 {
   "name": "react-native-eway-payments",
-  "version": "0.0.3",
+  "version": "0.0.7",
   "description": "",
+  "repository": "https://github.com/Clapps/react-native-eway-payments",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
