--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
-
 {
   "name": "react-native-eway-payments",
-  "version": "0.0.7",
-  "description": "",
+  "version": "0.2.0",
+  "description": "React Native EWay SDK implementation",
   "repository": "https://github.com/Clapps/react-native-eway-payments",
   "main": "index.js",
   "scripts": {
@@ -14,6 +13,9 @@
   "author": "",
   "license": "",
   "peerDependencies": {
-    "react-native": "^0.41.2"
+    "react-native": "0.57.2"
+  },
+  "devDependencies": {
+    "react-native": "0.57.2"
   }
 }
